--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~10.0.2",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ngrx/store": "^9.2.0",
+    "angular-4-data-table": "^0.4.6",
     "firebase": "^7.15.5",
     "hammerjs": "^2.0.8",
     "lodash-es": "^4.17.15",
